--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,177 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
     android:orientation="vertical"
-    android:padding="2dp"
-    tools:context=".HomeActivity"
-    android:gravity="center">
-
-    <LinearLayout
+    android:id="@+id/d1">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient"
+        android:orientation="vertical"
+        android:padding="2dp"
+        tools:context=".HomeActivity"
+        android:gravity="center">
+              <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/post_add"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:layout_width="131dp"
-        android:layout_height="125dp"
-        android:layout_margin="10dp">
+            <android.support.v7.widget.CardView
+                android:id="@+id/post_add"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_width="131dp"
+                android:layout_height="125dp"
+                android:layout_margin="10dp">
 
-        <LinearLayout
-            android:layout_width="103dp"
-            android:layout_height="104dp"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="103dp"
+                    android:layout_height="104dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="69dp"
-                android:layout_height="73dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/colorbackgroundorange"
-                android:baselineAligned="false"
-                android:padding="10dp"
-                android:src="@drawable/ic_note_add_black_24dp" />
+                    <ImageView
+                        android:layout_width="69dp"
+                        android:layout_height="73dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/colorbackgroundorange"
+                        android:baselineAligned="false"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_note_add_black_24dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Post Ad."
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Post Ad."
+                        android:textStyle="bold"
+                        android:layout_gravity="center_horizontal"/>
 
-            <!--<View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/cardview_dark_background"/>-->
+                    <!--<View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/cardview_dark_background"/>-->
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/search_ad"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_width="131dp"
+                android:layout_height="125dp"
+                android:layout_margin="10dp">
+
+                <LinearLayout
+                    android:layout_width="103dp"
+                    android:layout_height="104dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+                        android:layout_width="69dp"
+                        android:layout_height="73dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/cerclebackgroundblue"
+                        android:baselineAligned="false"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_search_black_24dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Serach Ad."
+                        android:textStyle="bold"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
         </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/search_ad"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:layout_width="131dp"
-        android:layout_height="125dp"
-        android:layout_margin="10dp">
-
         <LinearLayout
-            android:layout_width="103dp"
-            android:layout_height="104dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <android.support.v7.widget.CardView
+                android:id="@+id/dump_waste"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_width="131dp"
+                android:layout_height="125dp"
+                android:layout_margin="10dp">
 
-            <ImageView
-                android:layout_width="69dp"
-                android:layout_height="73dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/cerclebackgroundblue"
-                android:baselineAligned="false"
-                android:padding="10dp"
-                android:src="@drawable/ic_search_black_24dp" />
+                <LinearLayout
+                    android:layout_width="103dp"
+                    android:layout_height="104dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Serach Ad."
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal"/>
+                    <ImageView
+                        android:layout_width="69dp"
+                        android:layout_height="73dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/cerclebackgroundpurple"
+                        android:baselineAligned="false"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_delete_black_24dp" />
 
-        </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Dump Waste."
+                        android:textStyle="bold"
+                        android:layout_gravity="center_horizontal"/>
 
-    </android.support.v7.widget.CardView>
+                </LinearLayout>
 
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/truck_path"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_width="131dp"
+                android:layout_height="125dp"
+                android:layout_margin="10dp">
+
+                <LinearLayout
+                    android:layout_width="103dp"
+                    android:layout_height="104dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+                        android:layout_width="69dp"
+                        android:layout_height="73dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/cerclebackgroundgreen"
+                        android:baselineAligned="false"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_location_on_black_24dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Truck Path"
+                        android:textStyle="bold"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>>
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="horizontal">
-    <android.support.v7.widget.CardView
-        android:id="@+id/dump_waste"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:layout_width="131dp"
-        android:layout_height="125dp"
-        android:layout_margin="10dp">
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/navigation_menu">
 
-        <LinearLayout
-            android:layout_width="103dp"
-            android:layout_height="104dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            >
 
-            <ImageView
-                android:layout_width="69dp"
-                android:layout_height="73dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/cerclebackgroundpurple"
-                android:baselineAligned="false"
-                android:padding="10dp"
-                android:src="@drawable/ic_delete_black_24dp" />
+    </android.support.design.widget.NavigationView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Dump Waste."
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:id="@+id/truck_path"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:layout_width="131dp"
-        android:layout_height="125dp"
-        android:layout_margin="10dp">
-
-        <LinearLayout
-            android:layout_width="103dp"
-            android:layout_height="104dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            >
-
-            <ImageView
-                android:layout_width="69dp"
-                android:layout_height="73dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/cerclebackgroundgreen"
-                android:baselineAligned="false"
-                android:padding="10dp"
-                android:src="@drawable/ic_location_on_black_24dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Truck Path"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-    </LinearLayout>>
-
-</LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
