--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"    >
 
 
 <!--<LinearLayout
@@ -70,87 +71,31 @@
         android:layout_marginTop="0dp"
         app:srcCompat="@drawable/logo" />
 
-    <EditText
-        android:id="@+id/editTextEmail"
+    <Button
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginBottom="285dp"
-        android:background="#11000000"
-        android:drawableLeft="@drawable/ic_action_user"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        android:text="Email"
-        android:textColorHint="@color/cardview_light_background"
-        android:textSize="14sp"
-        tools:layout_height="20dp"
-        tools:textSize="18sp" />
+        android:text="I'm a Truck Driver"
+        android:id="@+id/driver"
+        android:background="@drawable/mybutton"
 
-    <EditText
-        android:id="@+id/editTextPassword"
+        />
+
+    <Button
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginBottom="238dp"
-        android:background="#11000000"
-        android:drawableLeft="@drawable/ic_action_pass"
-        android:ems="10"
-        android:hint="Pasword"
-        android:inputType="textPassword" />
+        android:text="I'm a Customer"
+        android:id="@+id/customer"
+        android:background="@drawable/mybutton"
 
-    <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginBottom="103dp"
-        app:cardBackgroundColor="@color/colorAccent"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp">
+        />
 
-        <RelativeLayout
-            android:layout_width="285dp"
-            android:layout_height="wrap_content">
 
-            <!-- <TextView
-                android:id="@+id/buttonRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Login"
-                android:textColor="#ffff"
-                android:textColorHint="@color/cardview_light_background"
-                android:textSize="24sp" />-->
-            <Button
-                android:id="@+id/buttonRegister"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sign Up" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/textviewSign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
-        android:layout_marginBottom="60dp"
-        android:text="Already Registerd???Sign in"
-        android:textSize="14sp" />
-</RelativeLayout>
+
+</LinearLayout>
