--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -3,20 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".PostAdActivity"
     android:background="@drawable/gradient"
-    >
+    android:fitsSystemWindows="true"
+    tools:context=".PostAdActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@drawable/gradient"
-        >
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/gradient">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +34,7 @@
 
                 android:id="@+id/your_name"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:inputType="text"
                 android:singleLine="true"
@@ -54,7 +52,7 @@
             <EditText
                 android:id="@+id/phone_no"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
@@ -73,7 +71,7 @@
             <EditText
                 android:id="@+id/item_name"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:inputType="text"
                 android:singleLine="true"
@@ -92,11 +90,12 @@
             <Spinner
                 android:id="@+id/item_type"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="38dp" />
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:paddingLeft="3dp"
                 android:text="@string/price"
                 android:textAllCaps="true"
@@ -106,11 +105,13 @@
             <EditText
                 android:id="@+id/price"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:inputType="text"
                 android:singleLine="true"
                 android:textSize="20sp" />
+
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -125,8 +126,8 @@
                 android:id="@+id/iamge"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                android:src="@drawable/twitter"
-                />
+                android:src="@drawable/twitter" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -136,56 +137,59 @@
                     android:id="@+id/from_gallary"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
+                    android:layout_alignParentRight="true"
                     android:layout_gravity="center"
                     android:background="@color/colorPrimary"
-                    android:paddingBottom="1dp"
                     android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
                     android:paddingTop="1dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="1dp"
                     android:text="@string/from_gallary"
                     android:textAllCaps="true"
-                    android:layout_alignParentRight="true"
                     android:textColor="@android:color/white"
-                    android:textSize="13sp"/>
-                  <Button
+                    android:textSize="13sp" />
+
+                <Button
                     android:id="@+id/from_camera"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:layout_gravity="center"
                     android:background="@color/colorPrimary"
-                    android:paddingBottom="1dp"
                     android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
                     android:paddingTop="1dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="1dp"
                     android:text="@string/from_camera"
                     android:textAllCaps="true"
                     android:textColor="@android:color/white"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
-            <Button
-                android:id="@+id/see_location"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:background="@color/colorPrimary"
-                android:paddingBottom="1dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingTop="1dp"
-                android:text="@string/location"
-                android:textAllCaps="true"
-                android:textColor="@android:color/white"
-                android:textSize="13sp"/>
+
+                <Button
+                    android:id="@+id/see_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:background="@color/colorPrimary"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="1dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="1dp"
+                    android:text="@string/location"
+                    android:textAllCaps="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="13sp" />
             </RelativeLayout>
 
             <EditText
                 android:id="@+id/loc_latitude"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="46dp"
                 android:layout_marginBottom="20dp"
                 android:inputType="text"
                 android:singleLine="true"
@@ -194,7 +198,7 @@
             <EditText
                 android:id="@+id/loc_longitude"
                 android:layout_width="fill_parent"
-                android:layout_height="38dp"
+                android:layout_height="46dp"
                 android:layout_marginBottom="20dp"
                 android:inputType="text"
                 android:singleLine="true"
@@ -207,14 +211,14 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:background="@color/colorPrimary"
-                android:paddingBottom="1dp"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp"
                 android:paddingTop="1dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="1dp"
                 android:text="@string/save_details"
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
-                android:textSize="13sp"/>
+                android:textSize="13sp" />
         </LinearLayout>
     </ScrollView>
 
