--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -16,7 +16,7 @@
     </item>
     <item
         android:id="@+id/contactUs"
-        android:title="Contact Us"
+        android:title="My Profile"
         android:icon="@drawable/ic_contact_us_black_24dp">
 
 
@@ -27,6 +27,13 @@
         android:title="Contact Us"
         android:icon="@drawable/ic_my_profile_box_black_24dp">
 
+
+    </item>
+
+    <item
+        android:id="@+id/logOut"
+        android:title="Logout"
+        android:icon="@drawable/ic_log_out_black_24dp">
 
     </item>
 
