--- a/app/src/main/res/layout/activity_my_ads.xml
+++ b/app/src/main/res/layout/activity_my_ads.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchAdActivity"
+    tools:context=".MyAdsActivity"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
@@ -14,7 +14,5 @@
         android:layout_height="match_parent"
         android:background="@drawable/gradient"
         />
-
-
 
 </LinearLayout>
