add ad details with detail name

--- a/app/src/main/res/layout/activity_driver_map.xml
+++ b/app/src/main/res/layout/activity_driver_map.xml
@@ -10,12 +10,14 @@
         android:id="@+id/star_journey"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/mybutton"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="45dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:paddingBottom="1dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:paddingTop="1dp"
         android:text="@string/start_journey"
         android:textAllCaps="true"
@@ -28,8 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
-        android:paddingBottom="1dp"
+        android:background="@drawable/mybuttonwastepickup"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="1dp"
