--- a/app/src/main/res/drawable/mybuttonwastepickup.xml
+++ b/app/src/main/res/drawable/mybuttonwastepickup.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dp" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />
+            <stroke android:width="1dip" android:color="#006eff" />
+            <gradient android:angle="-90" android:startColor="#006eff" android:endColor="#006eff"  />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="30dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <solid android:color="#58857e"/>
+            <stroke android:width="1dip" android:color="#006eff" />
+            <solid android:color="#006eff"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="20dp" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#05c134" android:endColor="#05c134" />
+            <stroke android:width="1dip" android:color="#006eff" />
+            <gradient android:angle="-90" android:startColor="#006eff" android:endColor="#006eff" />
         </shape>
     </item>
 </selector>
