--- a/app/src/main/res/layout/activity_buyier_map.xml
+++ b/app/src/main/res/layout/activity_buyier_map.xml
@@ -18,12 +18,33 @@
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/mybutton"
+        android:layout_marginBottom="45dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:paddingBottom="1dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="1dp"
+        android:text="@string/start_buyier_journey"
+        android:textAllCaps="true"
+        android:layout_alignParentRight="true"
+        android:textColor="@android:color/white"
+        android:textSize="13sp"/>
+
+    <Button
+        android:id="@+id/cancel_booking"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/mybuttondelete"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="1dp"
-        android:text="@string/start_buyier_journey"
+        android:text="@string/cancel_bookig"
         android:textAllCaps="true"
         android:layout_alignParentRight="true"
         android:textColor="@android:color/white"
