--- a/app/src/main/res/layout/activity_my_ads_details.xml
+++ b/app/src/main/res/layout/activity_my_ads_details.xml
@@ -90,9 +90,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:text="Buyer location"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/mybutton"/>
+                android:background="@drawable/mybutton"
+                android:textColor="@android:color/white"/>
+            <Button
+                android:id="@+id/deleteAd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:text="Delete AD."
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/mybuttondelete"
+                android:textColor="@android:color/white"/>
 
         </LinearLayout>
 
