--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -124,7 +124,7 @@
 
             <ImageView
                 android:id="@+id/iamge"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:src="@drawable/twitter" />
 
@@ -139,7 +139,7 @@
                     android:layout_height="32dp"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/mybutton"
                     android:paddingLeft="15dp"
                     android:paddingTop="1dp"
                     android:paddingRight="15dp"
@@ -154,7 +154,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:layout_gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/mybutton"
                     android:paddingLeft="15dp"
                     android:paddingTop="1dp"
                     android:paddingRight="15dp"
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:layout_gravity="center"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/mybutton"
                     android:paddingLeft="15dp"
                     android:paddingTop="1dp"
                     android:paddingRight="15dp"
@@ -204,21 +204,41 @@
                 android:singleLine="true"
                 android:textSize="20sp" />
 
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
             <Button
                 android:id="@+id/save_details"
+                android:background="@drawable/mybutton"
                 android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:background="@color/colorPrimary"
-                android:paddingLeft="15dp"
-                android:paddingTop="1dp"
-                android:paddingRight="15dp"
-                android:paddingBottom="1dp"
-                android:text="@string/save_details"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12sp"
                 android:textAllCaps="true"
+                android:layout_marginBottom="10dp"
+                android:text="@string/save_details"
                 android:textColor="@android:color/white"
-                android:textSize="13sp" />
+                android:layout_marginRight="10dp"/>
+
+            <Button
+                android:id="@+id/cancel_details"
+                android:background="@drawable/mybuttondelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                android:text="Cancel"
+                android:textAllCaps="true"
+                android:layout_marginBottom="10dp"
+                android:textColor="@android:color/white"
+                />
+
+
+
+
+        </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
