--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -11,117 +11,245 @@ app:contentPadding="10dp"
 app:cardUseCompatPadding="true">
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
-    <TextView
-        android:id="@+id/rTypeOfitem"
-        android:text="Type"
-        android:textColor="#000"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/ritemName"
-        android:text="Item Name"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/rUserName"
-        android:text="User Name"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/rPrice"
-        android:text="rPrice"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/rPhoneNo"
-        android:text="Phone No"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/rAdStatus"
-        android:text="Ad Status"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/rImageview"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        android:background="@drawable/internetslowdown_day"
-        />
-    <TextView
-        android:id="@+id/rUserId"
-        android:text="user ID"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/rAdId"
-        android:text="Ad Id"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/rLatitude"
-        android:text=""
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/rlongitude"
-        android:text="Phone No"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/rbuyerId"
-        android:text="user ID"
-        android:textColor="#000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
+                android:text="Item Type:"
+                android:textColor="#000"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/rTypeOfitem"
+                android:layout_width="187dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="45dp"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="29dp"
+                android:layout_marginRight="29dp"
+                android:text="Type"
+                android:textColor="#1969ea"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:text="Item Name:"
+                android:textColor="#000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/ritemName"
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:text="Item Name"
+            android:textColor="#1969ea"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:text="Price:   Rs."
+                android:textColor="#000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rPrice"
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:text="rPrice"
+            android:textColor="#1969ea"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+            <TextView
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:text="Phone No:"
+                android:textColor="#000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rPhoneNo"
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:text="Phone No"
+            android:textColor="#1969ea"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+            <TextView
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:text="Ad Status:"
+                android:textColor="#000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rAdStatus"
+            android:layout_width="187sp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:text="Ad Status"
+            android:textColor="#1969ea"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
+            <TextView
+                android:layout_width="141sp"
+                android:layout_height="wrap_content"
+                android:text="User Name:"
+                android:textColor="#000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rUserName"
+            android:layout_width="187sp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:text="User name"
+            android:textColor="#1969ea"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/rImageview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/internetslowdown_day"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/rUserId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="user ID"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/rAdId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ad Id"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/rLatitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/rlongitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Phone No"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/rbuyerId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="user ID"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:visibility="gone" />
 
 
-</LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
