--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -21,22 +21,47 @@
         app:srcCompat="@drawable/logo" />
 
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:theme="@style/EditTextHint"
         android:id="@+id/email"
+        app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        >
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:inputType="text" />
 
-         />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:theme="@style/EditTextHint"
         android:id="@+id/password"
-        android:inputType="textPassword"
+        app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="15"
+        app:passwordToggleEnabled="true"
+        >
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:inputType="textPassword" />
 
-        />
+    </android.support.design.widget.TextInputLayout>
+
+
+
         <Button
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
