--- a/app/src/main/res/layout/activity_search_ad_details.xml
+++ b/app/src/main/res/layout/activity_search_ad_details.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardBackgroundColor="#fff"
-    app:cardCornerRadius="3dp"
+    app:cardBackgroundColor="#5e585a"
     app:cardElevation="3dp"
-    app:contentPadding="5dp"
-    app:cardUseCompatPadding="true"
+    app:contentPadding="10dp"
+    app:cardUseCompatPadding="false"
     tools:context=".SearchAdDetailsActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+       >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="0dp"
                 android:text="Item Type:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Item Name:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -86,7 +86,7 @@
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Price:   Rs."
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -115,7 +115,7 @@
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Phone No:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -144,7 +144,7 @@
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Ad Status:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -160,7 +160,7 @@
             android:layout_marginEnd="29dp"
             android:layout_marginRight="29dp"
             android:text="Ad Status"
-            android:textColor="#1969ea"
+            android:textColor="#d61111"
             android:textSize="18sp"
             android:textStyle="bold" />
         </RelativeLayout>
@@ -172,7 +172,7 @@
                 android:layout_width="141sp"
                 android:layout_height="wrap_content"
                 android:text="User Name:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
