--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="550dp"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-app:cardBackgroundColor="#fff"
+app:cardBackgroundColor="#5e585a"
 app:cardCornerRadius="3dp"
 app:cardElevation="3dp"
 app:contentPadding="10dp"
@@ -27,7 +27,7 @@ app:cardUseCompatPadding="true">
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="0dp"
                 android:text="Item Type:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
@@ -57,7 +57,7 @@ app:cardUseCompatPadding="true">
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Item Name:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -86,7 +86,7 @@ app:cardUseCompatPadding="true">
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Price:   Rs."
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -114,7 +114,7 @@ app:cardUseCompatPadding="true">
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Phone No:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -142,7 +142,7 @@ app:cardUseCompatPadding="true">
                 android:layout_width="141dp"
                 android:layout_height="wrap_content"
                 android:text="Ad Status:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -158,7 +158,7 @@ app:cardUseCompatPadding="true">
             android:layout_marginEnd="29dp"
             android:layout_marginRight="29dp"
             android:text="Ad Status"
-            android:textColor="#1969ea"
+            android:textColor="#d61111"
             android:textSize="18sp"
             android:textStyle="bold" />
         </RelativeLayout>
@@ -170,7 +170,7 @@ app:cardUseCompatPadding="true">
                 android:layout_width="141sp"
                 android:layout_height="wrap_content"
                 android:text="User Name:"
-                android:textColor="#000"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         <TextView
@@ -196,7 +196,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:background="@drawable/internetslowdown_day"
+            android:background="@drawable/animaed_loading"
             android:scaleType="centerCrop" />
 
         <TextView
@@ -204,7 +204,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="user ID"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -214,7 +214,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Ad Id"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -224,7 +224,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -234,7 +234,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Phone No"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -244,7 +244,7 @@ app:cardUseCompatPadding="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="user ID"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15sp"
             android:textStyle="bold"
             android:visibility="gone" />
