--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -15,7 +15,7 @@
 
     </item>
     <item
-        android:id="@+id/contactUs"
+        android:id="@+id/MyProfile"
         android:title="My Profile"
         android:icon="@drawable/ic_contact_us_black_24dp">
 
@@ -23,7 +23,7 @@
     </item>
 
     <item
-        android:id="@+id/myProfile"
+        android:id="@+id/contactUs"
         android:title="Contact Us"
         android:icon="@drawable/ic_my_profile_box_black_24dp">
 
