--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorFormMasterElementTextTitle">#222222</color>
     <color name="formColor">#f4aa42</color>
+    <color name="colorWerning">#f44242</color>
 
 </resources>
