--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="colorFormMasterElementTextTitle">#222222</color>
     <color name="formColor">#f4aa42</color>
     <color name="colorWerning">#f44242</color>
+    <color name="colorViolat">#8112e2</color>
 
 </resources>
