--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -104,13 +104,91 @@
 
         </LinearLayout>
         <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <android.support.v7.widget.CardView
+            android:id="@+id/dump_waste"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:layout_width="131dp"
+            android:layout_height="125dp"
+            android:layout_margin="10dp">
+
+            <LinearLayout
+                android:layout_width="103dp"
+                android:layout_height="104dp"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_width="69dp"
+                    android:layout_height="73dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/cerclebackgroundpurple"
+                    android:baselineAligned="false"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_delete_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Dump Waste."
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/truck_path"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:layout_width="131dp"
+            android:layout_height="125dp"
+            android:layout_margin="10dp">
+
+            <LinearLayout
+                android:layout_width="103dp"
+                android:layout_height="104dp"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_width="69dp"
+                    android:layout_height="73dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/cerclebackgroundgreen"
+                    android:baselineAligned="false"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_location_on_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Truck Path"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:gravity="center"
             android:orientation="horizontal">
             <android.support.v7.widget.CardView
-                android:id="@+id/dump_waste"
+                android:id="@+id/admin_page"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:layout_width="131dp"
@@ -128,58 +206,26 @@
                         android:layout_width="69dp"
                         android:layout_height="73dp"
                         android:layout_gravity="center_horizontal"
-                        android:background="@drawable/cerclebackgroundpurple"
+                        android:background="@drawable/cercleviolaot"
                         android:baselineAligned="false"
                         android:padding="10dp"
-                        android:src="@drawable/ic_delete_black_24dp" />
+                        android:src="@drawable/ic_admin_with_cogwheels" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Dump Waste."
+                        android:text="Admin Panel"
                         android:textStyle="bold"
                         android:layout_gravity="center_horizontal"/>
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:id="@+id/truck_path"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_width="131dp"
-                android:layout_height="125dp"
-                android:layout_margin="10dp">
 
-                <LinearLayout
-                    android:layout_width="103dp"
-                    android:layout_height="104dp"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    >
+        </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="69dp"
-                        android:layout_height="73dp"
-                        android:layout_gravity="center_horizontal"
-                        android:background="@drawable/cerclebackgroundgreen"
-                        android:baselineAligned="false"
-                        android:padding="10dp"
-                        android:src="@drawable/ic_location_on_black_24dp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="Truck Path"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-        </LinearLayout>>
 
     </LinearLayout>
     <android.support.design.widget.NavigationView
