--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -142,9 +142,9 @@
 
             <ImageView
                 android:id="@+id/iamge"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/twitter" />
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:src="@drawable/default_thumb" />
             </android.support.design.widget.TextInputLayout>
 
             <RelativeLayout
