--- a/app/src/main/res/menu/nav_home_admin.xml
+++ b/app/src/main/res/menu/nav_home_admin.xml
@@ -9,7 +9,7 @@
     </item>
     <item
         android:id="@+id/settings"
-        android:title="Settings"
+        android:title="admin"
         android:icon="@drawable/ic_settings_black_24dp">
 
 
